[project]
name = "intraday-ML"
version = "0.1.0"
description = ""
authors = [
    {name = "Allen Kuo", email = "quantallen0613@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "ace-tools (==0.0)",
    "aiohappyeyeballs (==2.3.5)",
    "aiohttp (==3.10.3)",
    "aiosignal (==1.3.1)",
    "anyio (==4.6.2.post1)",
    "appdirs (==1.4.4)",
    "asttokens (==2.4.1)",
    "async-timeout (==4.0.3)",
    "attrs (==23.2.0)",
    "bcrypt (==4.1.2)",
    "beautifulsoup4 (==4.12.2)",
    "brotli (==1.0.9)",
    "cachetools (==5.3.3)",
    "certifi (==2023.11.17)",
    "cffi (==1.16.0)",
    "chardet (==5.2.0)",
    "charset-normalizer (==3.3.2)",
    "chinese-calendar (==1.10.0)",
    "click (==8.1.7)",
    "cloudpickle (==3.1.1)",
    "colorama (==0.4.6)",
    "comm (==0.1.4)",
    "contourpy (==1.2.0)",
    "cramjam (==2.8.1)",
    "cryptography (==42.0.5)",
    "cycler (==0.12.1)",
    "dateparser (==1.2.0)",
    "deap (==1.4.1)",
    "debugpy (==1.6.7)",
    "decorator (==5.1.1)",
    "defusedxml (==0.7.1)",
    "dnspython (==2.6.1)",
    "et-xmlfile (==1.1.0)",
    "exceptiongroup (==1.2.0)",
    "exchange-calendars (==4.5)",
    "executing (==2.0.1)",
    "fake-useragent (==2.0.3)",
    "fastparquet (==2024.2.0)",
    "filelock (==3.17.0)",
    "flask (==2.2.5)",
    "flask-cors (==4.0.1)",
    "fonttools (==4.47.0)",
    "frozendict (==2.3.10)",
    "frozenlist (==1.4.1)",
    "fsspec (==2024.2.0)",
    "google-api-core (==2.19.0)",
    "google-api-python-client (==2.127.0)",
    "google-auth (==2.29.0)",
    "google-auth-httplib2 (==0.2.0)",
    "google-auth-oauthlib (==1.2.0)",
    "googleapis-common-protos (==1.63.0)",
    "greenlet (==3.0.3)",
    "gtts (==2.5.1)",
    "h11 (==0.14.0)",
    "holidays (==0.69)",
    "html5lib (==1.1)",
    "httpcore (==1.0.6)",
    "httplib2 (==0.22.0)",
    "httpx (==0.27.2)",
    "idna (==3.6)",
    "importlib-metadata (==7.0.0)",
    "importlib-resources (==6.1.1)",
    "inflection (==0.5.1)",
    "influxdb-client (==1.39.0)",
    "ipykernel (==6.26.0)",
    "ipython (==8.18.1)",
    "itsdangerous (==2.0.1)",
    "jedi (==0.19.1)",
    "jinja2 (==3.1.3)",
    "joblib (==1.4.2)",
    "jupyter-client (==8.6.0)",
    "jupyter-core (==4.12.0)",
    "kaleido (==0.2.1)",
    "kiwisolver (==1.4.5)",
    "korean-lunar-calendar (==0.3.1)",
    "lightgbm (==4.5.0)",
    "llvmlite (==0.43.0)",
    "lxml (==4.9.3)",
    "markupsafe (==2.1.3)",
    "matplotlib (==3.8.2)",
    "matplotlib-inline (==0.1.6)",
    "mkl-fft (==1.3.8)",
    "mkl-random (==1.2.4)",
    "more-itertools (==10.2.0)",
    "mplfinance (==0.12.10b0)",
    "mpmath (==1.3.0)",
    "multidict (==6.0.5)",
    "multitasking (==0.0.11)",
    "naked (==0.1.32)",
    "nest-asyncio (==1.5.8)",
    "networkx (==3.2.1)",
    "nltk (==3.8.1)",
    "numba (==0.60.0)",
    "oauthlib (==3.2.2)",
    "odfpy (==1.4.1)",
    "openpyxl (==3.1.2)",
    "outcome (==1.3.0.post0)",
    "packaging (==23.2)",
    "pandas (==2.1.4)",
    "pandas-market-calendars (==4.3.2)",
    "paramiko (==3.4.0)",
    "parso (==0.8.3)",
    "patsy (==0.5.6)",
    "peewee (==3.17.0)",
    "pickleshare (==0.7.5)",
    "pillow (==10.1.0)",
    "pip (==24.1.1)",
    "platformdirs (==3.10.0)",
    "plotly (==5.22.0)",
    "pooch (==1.7.0)",
    "prettytable (==3.11.0)",
    "prompt-toolkit (==3.0.42)",
    "proto-plus (==1.23.0)",
    "protobuf (==4.25.3)",
    "psutil (==5.9.0)",
    "psycopg2 (==2.9.9)",
    "pure-eval (==0.2.2)",
    "pyasn1 (==0.6.0)",
    "pyasn1-modules (==0.4.0)",
    "pycparser (==2.21)",
    "pycryptodome (==3.20.0)",
    "pydub (==0.25.1)",
    "pygments (==2.17.2)",
    "pygsheets (==2.0.6)",
    "pyluach (==2.2.0)",
    "pymongo (==4.7.3)",
    "pymysql (==1.1.1)",
    "pynacl (==1.5.0)",
    "pyodbc (==5.0.1)",
    "pyparsing (==3.1.1)",
    "pysocks (==1.7.1)",
    "python-binance (==1.0.19)",
    "python-dateutil (==2.8.2)",
    "python-telegram-bot (==21.7)",
    "pytorch-tabnet (==4.1.0)",
    "pytz (==2023.3.post1)",
    "pyyaml (==6.0.2)",
    "pyzmq (==23.2.1)",
    "reactivex (==4.0.4)",
    "redis (==5.0.1)",
    "regex (==2024.5.15)",
    "requests (==2.31.0)",
    "requests-oauthlib (==2.0.0)",
    "rsa (==4.9)",
    "schedule (==1.2.1)",
    "scikit-learn (==1.5.1)",
    "seaborn (==0.13.2)",
    "selenium (==4.16.0)",
    "setuptools (==68.0.0)",
    "shap (==0.47.0)",
    "shellescape (==3.8.1)",
    "six (==1.16.0)",
    "slicer (==0.0.8)",
    "sniffio (==1.3.0)",
    "sortedcontainers (==2.4.0)",
    "soupsieve (==2.5)",
    "sqlalchemy (==2.0.25)",
    "stack-data (==0.6.2)",
    "stats (==0.1.2a0)",
    "statsmodels (==0.14.1)",
    "sympy (==1.13.1)",
    "tejapi (==0.1.28)",
    "tenacity (==8.4.2)",
    "threadpoolctl (==3.5.0)",
    "toolz (==0.12.0)",
    "tornado (==6.2)",
    "tqdm (==4.66.4)",
    "traitlets (==5.14.0)",
    "trio (==0.23.2)",
    "trio-websocket (==0.11.1)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2023.3)",
    "tzlocal (==5.2)",
    "ujson (==5.10.0)",
    "uritemplate (==4.1.1)",
    "urllib3 (==2.1.0)",
    "useragent (==0.1.1)",
    "wcwidth (==0.2.12)",
    "webencodings (==0.5.1)",
    "websockets (==12.0)",
    "werkzeug (==2.3.8)",
    "wheel (==0.41.2)",
    "win-inet-pton (==1.1.0)",
    "wsproto (==1.2.0)",
    "xgboost (==2.1.4)",
    "yarl (==1.9.4)",
    "yfinance (==0.2.33)",
    "zipp (==3.17.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
